Se agregan funcionalidades de la 1 a la 5
